fix : remove address and phone

--- a/index.html
+++ b/index.html
@@ -497,13 +497,9 @@ id="envoi"><i class="fa fa-paper-plane" aria-hidden="true"></i> Envoyer</button>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <i class="fa fa-linkedin" aria-hidden="true"></i>2017 - Antoine LEGRAND<br />
-                    
-                    <i class="glyphicon glyphicon-home"></i> 17bis avenue du maréchal Foch, 77500 
-Chelles
+                    <i class="fa fa-linkedin" aria-hidden="true"></i>2017 - Antoine LEGRAND
                 </div>
                 <div class="col-md-6">
-                        <i class="glyphicon glyphicon-earphone"></i> 07 62 61 43 81<br />
                         <i class="glyphicon glyphicon-send"></i> antoine.legrand77@gmail.com
                 </div>
             </div>
